Revert "fix(core): use translateZ by default on swiper slide to make it less flicker in Safari"
This reverts commit 481fb038d9c0b7b9b64a36eaef0942b8505cf591.

--- a/src/core/core.less
+++ b/src/core/core.less
@@ -40,7 +40,6 @@
   height: 100%;
   position: relative;
   transition-property: transform;
-  transform: translateZ(0);
 }
 .swiper-slide-invisible-blank {
   visibility: hidden;
