--- a/src/core/core.scss
+++ b/src/core/core.scss
@@ -39,7 +39,6 @@
   height: 100%;
   position: relative;
   transition-property: transform;
-  transform: translateZ(0);
 }
 .swiper-slide-invisible-blank {
   visibility: hidden;
